[project]
name = "wplt"
version = "1.0.1"
authors = [
    { name="Emil Wagman", email="emilwagman@orpose.com" }
]
description = "Python plotting package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.21.0",
    "Pillow >= 10.1.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
"Documentation" = "https://github.com/Neobyte01/WPLT/wiki"
"Source Code"   = "https://github.com/Neobyte01/WPLT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/dist"]